# ssf-framework

./: .gitignore  CMakeLists.txt  README.md
certs/: WARNING
cmake-ms/: CMakeLists.txt
cmake-unix/: CMakeLists.txt
src/ssf/: CMakeLists.txt
src/ssf/io/: accept_op.h  read_op.h
src/ssf/layer/: accept_op.h  basic_empty_datagram.h  basic_empty_stream.h  connect_op.h
src/ssf/layer/cryptography/tls/OpenSSL/: impl.h
src/ssf/layer/interface_layer/: specific_interface_socket.h
src/ssf/layer/multiplexing/: basic_multiplexer_socket_service.h
src/ssf/layer/network/: basic_network_raw_socket_service.h
src/ssf/layer/physical/: udp.h
src/ssf/layer/queue/: commutator.h
src/ssf/layer/routing/: basic_router_service.h  basic_routing_table.h
src/ssf/network/: manager.h
src/ssf/system/: specific_interfaces_collection.h  system_interfaces.cpp  system_routers.cpp
src/tests/: CMakeLists.txt  circuit_test_fixture.h  datagram_protocol_helpers.h  interface_test_fixture.h  interfaces_system_tests.cpp  queue_tests.cpp  routing_test_fixture.h  stream_protocol_helpers.h  tools.h
